🩹 fix missing borders on bordered section, allow more colors

--- a/frontend/styles/cms_utils.scss
+++ b/frontend/styles/cms_utils.scss
@@ -191,7 +191,6 @@ $backdrops: (
 
 .bordered-section {
   margin-top: 0.65em;
-  border-width: 4px;
 
   .bordered-section-headline {
     margin-top: -0.65em;
